UIView: Added registerEnhancement experiemental UIForm: Added enhancement for .m-form

--- a/examples/nootebook/views/login/login.html
+++ b/examples/nootebook/views/login/login.html
@@ -1,5 +1,14 @@
 <div class="index-view">
 
+
+    <form class="m-form">
+      <div>
+        <label class="m-label">E-mail</label>
+        <input id="inputEmail" placeholder="E-mail" type="text" class="m-text">
+      </div>
+    </div>
+
+
     <div class="ui form segment">
       <div class="field">
         <label>E-mail</label>
