--- a/source/yuidoc-theme/yuidoc-theme-blue/partials/index.handlebars
+++ b/source/yuidoc-theme/yuidoc-theme-blue/partials/index.handlebars
@@ -1,4 +1,14 @@
-<h1>Keyboard Shortcuts</h1>
+<h1>What is Mootor?</h1>
+
+		<p>It’s a framework, meaning a group of tools, open source tools, to develop mobile applications based on HTML5.</p>
+<p><strong>HTML and open source</strong></p>
+<p>HTML5 because it’s a fast growing technology and it’s multi-platform (Android, iOS, Firefox OS, etc). Open source because a front-end tool in HTML5 can not avoid it.</p>
+<h2>Github</h2>
+https://github.com/emi420/Mootor/issues/milestones
+
+
+<br />
+<h3>Keyboard Shortcuts</h3>
 <p>
   Browse to a module or class using the sidebar to view its API documentation.
 </p>
@@ -12,7 +22,5 @@
 
   <li class="pc-only"><p>With the API search box or sidebar focused, use <kbd>Ctrl+Left</kbd> and <kbd>Ctrl+Right</kbd> to switch sidebar tabs.</p></li>
 </ul>
-
-
-
-
+<br />
+<p>Vive l’open source!</p>
