- Remove Semantic css. + Draft for uiform. + Improvements un uipanel/uiview (move code for view.ui.el from uipanel to uiview)

--- a/source/spec/views/index/index.html
+++ b/source/spec/views/index/index.html
@@ -23,7 +23,7 @@
           <div class="ui corner label">
             <i class="icon asterisk"></i>
           </div>
-          <div id="initElement">initElement</div>
+          <div style="display:none" id="initElement">initElement</div>
           <div id="loadElement"></div>
           <div id="beforeLoadElement"></div>
           <div id="unloadElement"></div>
