--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -1,16 +1,41 @@
-<form class="m-form">
+<form class="m-form m-form-top-labels">
 
-    <div class="m-text">
+    <div class="m-field">
         <label>Text</label>
         <input class="m-text" placeholder="Text here" />
     </div>
 
-    <div class="m-text">
+    <div class="m-field">
         <label>TextArea</label>
         <textarea class="m-textarea" placeholder="Text here"></textarea>
     </div>
 
-    <div class="m-text">
+    <div class="m-field">
+        <label>Select</label>
+        <select class="m-select">
+            <option value="01">Option 1</option>
+            <option value="02" selected>Option 2</option>
+            <option value="03">Option 3</option>
+        </select>
+    </div>
+    
+    <input type="submit" class="m-button" />
+
+</form>
+
+<form class="m-form m-form-left-labels">
+
+    <div class="m-field">
+        <label>Text</label>
+        <input class="m-text" placeholder="Text here" />
+    </div>
+
+    <div class="m-field">
+        <label>TextArea</label>
+        <textarea class="m-textarea" placeholder="Text here"></textarea>
+    </div>
+
+    <div class="m-field">
         <label>Select</label>
         <select class="m-select">
             <option value="01">Option 1</option>
