--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -18,6 +18,7 @@ html, body {
 	@import "uiheader";
 	@import "uinavbar";
 	@import "uiloading";
+	@import "uiform";
 	@import "utils";
 }
 @import "uiloading_animations";
