- Deleted old unused image files for demo app. + Prevent some events to fire twice on touch-enabled devices. + Prevent routed links to refresh page. + Improvements and bugfixes on UIHeader. + New file sprites.scss with some images as base64 urls (ex: back button background). + Updated colors and added some default values

--- a/examples/demo/views/index/index.html
+++ b/examples/demo/views/index/index.html
@@ -4,7 +4,7 @@
       <div class="field">
         <label>Your name</label>
         <div class="ui left labeled icon input">
-          <input id="inputEmail" class="m-text" placeholder="Fullname or nickname" type="text">
+          <input id="inputEmail" class="m-text" placeholder="Fullname or nickname" type="text" value="Bob">
           <i class="user icon"></i>
           <div class="ui corner label">
             <i class="icon asterisk"></i>
