Started work on colors and buttons CSS

--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -19,7 +19,14 @@
         </select>
     </div>
     
-    <input type="submit" class="m-button" />
+    <input type="submit" value="Default" class="m-button" />
+    <br><br>
+    <input type="submit" value="Default" class="m-button-small" />
+    <br><br>
+
+    <input type="submit" value="Default" class="m-button-outline" />
+    <br><br>
+    <input type="submit" value="Default" class="m-button-outline-small" />
 
 </form>
 
