--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -14,7 +14,9 @@ html, body {
 
 .m-app {
 	@import "fonts";
+	@import "colors";
 	@import "uipanel";
+	@import "uibutton";
 	@import "uiheader";
 	@import "uinavbar";
 	@import "uiloading";
