--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -28,6 +28,29 @@
     <br><br>
     <input type="submit" value="Default" class="m-button-outline-small" />
 
+    <br><br>
+
+    <input type="submit" value="Default" class="m-button-fullwidth" />
+    <br><br>
+    <input type="submit" value="Default" class="m-button-outline-fullwidth" />
+    <br><br>
+
+    <input type="submit" value="Default" class="m-button m-button-default" />
+    <br><br>
+    <input type="submit" value="Primary" class="m-button m-button-primary" />
+    <br><br>
+    <input type="submit" value="Secondary" class="m-button m-button-secondary" />
+    <br><br>
+    <input type="submit" value="Success" class="m-button m-button-success" />
+    <br><br>
+    <input type="submit" value="Warning" class="m-button m-button-warning" />
+    <br><br>
+    <input type="submit" value="Info" class="m-button m-button-info" />
+    <br><br>
+    <input type="submit" value="Danger" class="m-button m-button-danger    " />
+    <br><br>
+
+
 </form>
 
 <form class="m-form m-form-left-labels">
