--- a/source/css/_uibutton-color.scss
+++ b/source/css/_uibutton-color.scss
@@ -1,8 +1,22 @@
-.m-button-default {
+.m-button-fullwidth {
+    @extend .m-bg-color-primary-1;
+}
+
+.m-button-outline-fullwidth,
+.m-button-outline-small {
+    @extend .m-bg-color-transparent;
+    @extend .m-border-color-primary-1;
+    @extend .m-color-primary-1;
+}
+    
+.m-button-default  {
+    &.m-button-fullwidth,
     &.m-button {
         @extend .m-bg-color-primary-1;
     }
 
+    &.m-button-outline-fullwidth,
+    &.m-button-outline-small,
     &.m-button-outline {
         @extend .m-bg-color-transparent;
         @extend .m-border-color-primary-1;
@@ -11,10 +25,13 @@
 }
 
 .m-button-primary {
+    &.m-button-fullwidth,
     &.m-button {
         @extend .m-bg-color-primary-7;
     }
 
+    &.m-button-outline-fullwidth,
+    &.m-button-outline-small,
     &.m-button-outline {
         @extend .m-bg-color-transparent;
         @extend .m-border-color-primary-7;
@@ -22,10 +39,13 @@
     }
 }
 .m-button-secondary {
+    &.m-button-fullwidth,
     &.m-button {
         @extend .m-bg-color-primary-8;
     }
 
+    &.m-button-outline-fullwidth,
+    &.m-button-outline-small,
     &.m-button-outline {
         @extend .m-bg-color-transparent;
         @extend .m-border-color-primary-8;
@@ -33,10 +53,13 @@
     }
 }
 .m-button-success {
+    &.m-button-fullwidth,
     &.m-button {
         @extend .m-bg-color-primary-4;
     }
 
+    &.m-button-outline-fullwidth,
+    &.m-button-outline-small,
     &.m-button-outline {
         @extend .m-bg-color-transparent;
         @extend .m-border-color-primary-4;
@@ -44,10 +67,13 @@
     }
 }
 .m-button-warning {
+    &.m-button-fullwidth,
     &.m-button {
         @extend .m-bg-color-primary-9;
     }
 
+    &.m-button-outline-fullwidth,
+    &.m-button-outline-small,
     &.m-button-outline {
         @extend .m-bg-color-transparent;
         @extend .m-border-color-primary-9;
@@ -55,10 +81,13 @@
     }
 }
 .m-button-info {
+    &.m-button-fullwidth,
     &.m-button {
         @extend .m-bg-color-primary-5;
     }
 
+    &.m-button-outline-fullwidth,
+    &.m-button-outline-small,
     &.m-button-outline {
         @extend .m-bg-color-transparent;
         @extend .m-border-color-primary-5;
@@ -66,16 +95,20 @@
     }
 }
 .m-button-danger {
+    &.m-button-fullwidth,
     &.m-button {
         @extend .m-bg-color-primary-6;
     }
 
+    &.m-button-outline-fullwidth,
+    &.m-button-outline-small,
     &.m-button-outline {
         @extend .m-bg-color-transparent;
         @extend .m-border-color-primary-6;
         @extend .m-color-primary-6;
     }
 }
+
 
 .m-button {
     @extend .m-button-default;
@@ -88,18 +121,4 @@
 .m-button-outline {
     @extend .m-button;
     @extend .m-button-default;
-}
-
-.m-button-outline-small {
-    @extend .m-button-outline;
-    @extend .m-button-small;
-}
-
-.m-button-fullwidth {
-    @extend .m-button;
-}
-
-.m-button-outline-fullwidth {
-    @extend .m-button-outline;
-    @extend .m-button-fullwidth;
 }
