Fix for sprites missing compass dependency. Added index for examples/demo app Improvements in buttons, now they display properly. Fixed mootor in firefox

--- a/examples/demo/views/buttons/buttons.html
+++ b/examples/demo/views/buttons/buttons.html
@@ -1,9 +1,8 @@
     <div class="m-button m-button-default">
-        <span class="m-icon"></span>
+        <span class="m-icon-add-circle-small"></span>
         Default
-        <span class="m-icon"></span>
+        <span class="m-icon-add-circle"></span>
     </div>
-
 
     
     <input type="submit" value="Unspecified" class="m-button" />
