--- a/source/css/_sprites.scss
+++ b/source/css/_sprites.scss
@@ -1,4 +1,5 @@
 @import "compass/utilities/sprites/base";  
+@import "compass/css3/background-size";
 
 .m-sprite {
     background-repeat: no-repeat;
