--- a/source/css/_uibutton-color.scss
+++ b/source/css/_uibutton-color.scss
@@ -17,7 +17,9 @@
 
 .m-button-default  {
     &.m-button-fullwidth,
+    &.m-button:link,
     &.m-button {
+        color: black;
         @extend .m-bg-color-primary-1;
     }
 
@@ -30,7 +32,9 @@
 
 .m-button-primary {
     &.m-button-fullwidth,
+    &.m-button:link,
     &.m-button {
+        color: black;
         @extend .m-bg-color-primary-7;
     }
 
@@ -44,6 +48,7 @@
 }
 .m-button-secondary {
     &.m-button-fullwidth,
+    &.m-button:link,
     &.m-button {
         @extend .m-bg-color-primary-8;
     }
@@ -58,6 +63,7 @@
 }
 .m-button-success {
     &.m-button-fullwidth,
+    &.m-button:link,
     &.m-button {
         @extend .m-bg-color-primary-4;
     }
@@ -72,6 +78,7 @@
 }
 .m-button-warning {
     &.m-button-fullwidth,
+    &.m-button:link,
     &.m-button {
         @extend .m-bg-color-primary-9;
     }
@@ -86,6 +93,7 @@
 }
 .m-button-info {
     &.m-button-fullwidth,
+    &.m-button:link,
     &.m-button {
         @extend .m-bg-color-primary-5;
     }
@@ -100,6 +108,7 @@
 }
 .m-button-danger {
     &.m-button-fullwidth,
+    &.m-button:link,
     &.m-button {
         @extend .m-bg-color-primary-6;
     }
