UIButton: CSS Fixes UIApp: Links are now "natural" not prevented by Mootor

--- a/examples/demo/views/buttons/buttons.html
+++ b/examples/demo/views/buttons/buttons.html
@@ -1,7 +1,12 @@
+    <button class="m-button m-button-secondary">
+        <span class="m-icon-add-circle-small"></span>
+        Secondary
+        <span class="m-icon-add-circle-small"></span>
+    </button>
     <div class="m-button m-button-default">
         <span class="m-icon-add-circle-small"></span>
         Default
-        <span class="m-icon-add-circle"></span>
+        <span class="m-icon-add-circle-small"></span>
     </div>
 
     
